data/derived/sp14/progs/unify/prog2122.ml.out
Characters 89-97:
  | (h::t) -> h (pipe t);;
                ^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
